# recmap

./: .gitignore  CITATION.cff  Cargo.toml  README.md
examples/: calc_map_lengths.rs
src/: file.rs  genome.rs  lib.rs  main.rs  numeric.rs  recmap.rs
tests_data/: decode_2010_test_map.txt  test_hapmap.txt
