[package]
name = "recmap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
flate2 = "1.0.28"
genomap = "0.1.3"
indexmap = "2.2.2"
ndarray = "0.15.6"
num-traits = "0.2.17"
serde = { version = "1.0.196", features = ["derive"] }
thiserror = "1.0.56"

[dev-dependencies]
clap = { version = "4.4.18", features = ["derive"] }
tempfile = "3.10.0"
