[package]
name = "recmap"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Vince Buffalo <vsbuffalo@gmail.com>"]
keywords = ["genomics", "bioinformatics", "compbio"]
categories = ["science"]
repository = "https://github.com/vsbuffalo/recmap"
description = "A library for reading and working with recombination maps in Rust"

[dependencies]
csv = "1.3.0"
flate2 = "1.0.28"
genomap = "0.1.3"
indexmap = "2.2.2"
ndarray = "0.15.6"
num-traits = "0.2.17"
serde = { version = "1.0.196", features = ["derive"] }
thiserror = "1.0.56"

[dev-dependencies]
clap = { version = "4.4.18", features = ["derive"] }
tempfile = "3.10.0"

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 3
